[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nefile"
version = "0.9.0"
description = "Parse 16-bit New Executable (NE) programs."
readme = "README.md"
authors = [{ name = "npjg" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["struct", "reverse-engineering"]
requires-python = ">=3.9"
dependencies = [
    "self_documenting_struct>=0.9.1"
]

[project.urls]
Homepage = "https://github.com/npjg/nefile"
